# rustFoundations

./: Cargo.toml  makefile  readme.md
authentication/: Cargo.toml
authentication/src/: lib.rs  user.rs
authentication/src/login_action/: denied_reason.rs  login_action.rs  mod.rs  role.rs
bench/: Cargo.toml
bench/src/: lib.rs
dashmap_lock_free_structures/: Cargo.toml
dashmap_lock_free_structures/src/: main.rs
feature_exec/: Cargo.toml
feature_exec/src/: main.rs
feature_lib/: Cargo.toml
feature_lib/src/: lib.rs
generic_data_store/: Cargo.toml
generic_data_store/src/: main.rs
globals_lazy_init/: Cargo.toml
globals_lazy_init/src/: main.rs
hello_tokio/: Cargo.toml
hello_tokio/src/: main.rs
login/: Cargo.toml  users.json
login/src/: main.rs
login_system/: Cargo.toml
macros_simple/: Cargo.toml
macros_simple/src/: main.rs
new_types/src/: main.rs
primes_concurrency/: Cargo.toml
primes_concurrency/src/: main.rs
primes_count_rayon/: Cargo.toml
primes_count_rayon/src/: main.rs
tcp_login_server/: Cargo.toml
tcp_login_server/src/: main.rs
userman/: Cargo.toml  users.json
userman/src/: main.rs
web/: Cargo.toml  login.html
web/src/: main.rs
