[package]
name = "rustFoundations"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[workspace]
members = [
    "login_system",
    "login",
    "authentication",
    "userman"
]
# To import directly from git:
# { git = "git path" } and load directly from a shared Git repository.