[package]
name = "rustFoundations"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[workspace]
members = [
    "login_system",
    "login",
    "authentication",
    "userman",
    "primes_concurrency",
    "primes_count_rayon",
    "hello_tokio",
    "globals_lazy_init",
    "new_types",
    "generic_data_store",
    "macros_simple",
    "feature_exec",
    "feature_lib",
    "dashmap_lock_free_structures",
    "bench",
    "tcp_login_server",
    "web"
]
# To import directly from git:
# { git = "git path" } and load directly from a shared Git repository.