[package]
name = "feature_exec"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#feature_lib = { path = "../feature_lib"}
feature_lib = { path = "../feature_lib", default_features = false, features = [ "other" ]}